Refactor chance handling